# ferran-jovell-amphora-logistics-technical-task

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt  t.py  test-requirements.txt
amphora/: asgi.py  settings.py  urls.py  wsgi.py
amphora/api/: apps.py  urls.py  views.py
amphora/health/: apps.py  urls.py
tests/: conftest.py
